style.css
body {
    background-color: papayawhip;
    font-family: Arial, Helvetica, sans-serif;
    color: black;

}

.container {
    background-color: slategrey;
    display: grid;
    border: 5px;
    border-color: black;
    border-style: solid;
    grid-template-columns: 1fr 1fr .8fr;
    grid-template-rows: 1.5fr 1fr 1fr 1fr 1fr;
    width: 400px;
    height: 600px;
    padding: 10px;
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -310px;
    margin-left: -210px;

}

.displayArea {
    grid-row-start: 1;
    grid-row-end: 2;
    grid-column-start: 1;
    grid-column-end: 4;
    background-color: snow;
    display:grid;
    grid-template-columns: subgrid;
    padding: 25px 25px 0px 25px;
    border-radius: 30px;
    border: 1px solid black;

}

.display {
    align-self: end;
    justify-self: right;
    font-size: 40pt;
    grid-column-start: 1;
    grid-column-end: 4;
    margin: 0px;
}

#clear {
    grid-row-start: 2;
    grid-row-end: 3;
    grid-column: 1/4;
    border: 1px solid black;
    margin-top: 10px;
    margin-bottom: 10px;
    border-radius: 10px;
}

.numbers {
    grid-row-start: 3;
    grid-row-end: 6;
    grid-column-start: 1;
    grid-column-end: 3;
    width: 100%;
    height: 100%;
    


}

.operators {
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 3;
    grid-row-end: 6;

}

.number {
    width: 32%;
    height: 25%;
    padding: 0px;
    border: 1px solid black;
    border-radius: 10px;
}

#equals {
    width: 32%;
    height: 25%;
    padding: 0px;
    border-radius: 10px;
    border: 1px solid black;
}

ul {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    list-style: none;
}

li {
    height: 25%;
}
.operator {
    width: 100%;
    height: 100%;
    border: 1px solid black;
    border-radius: 10px;
}

#previousInput {
    grid-column-start: 1;
    grid-column-end: 4;
    justify-self: right;
}

#headertext {
    text-align: center;
}

#footertext {
    text-align: center;
}

.footer {
    position: absolute;
    bottom: 0%;
    left: 50%;
    margin-left: -108.08px;
    margin-top: -29.2px;
}

